Fix select z-index issue

--- a/src/styles/components/_select.scss
+++ b/src/styles/components/_select.scss
@@ -83,7 +83,7 @@ $select-input-border-color: $dp-greyscale-300;
 
   .react-select__menu {
     margin: -1px 0 0;
-    z-index: 2;
+    z-index: 3;
   }
 
   .react-select__menu-list {
